// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots tests renders TextField component 1`] = `
<Fragment>
  <WithStyles(ForwardRef(TextField))
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "",
        "id": "-label",
        "shrink": undefined,
      }
    }
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id=""
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "-label",
        "id": "",
        "label": undefined,
      }
    }
    name="testField"
    type="text"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component appending a class 1`] = `
<Fragment>
  <WithStyles(ForwardRef(TextField))
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "",
        "id": "-label",
        "shrink": undefined,
      }
    }
    className="requiredField"
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id=""
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "-label",
        "id": "",
        "label": undefined,
      }
    }
    name="testField"
    type="text"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component with shrink:true 1`] = `
<Fragment>
  <WithStyles(ForwardRef(TextField))
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "test",
        "id": "test-label",
        "shrink": true,
      }
    }
    floatingLabelText="This is a test textfield component"
    floatinglabelfixed={true}
    fullWidth={true}
    id="test"
    inputProps={
      Object {
        "aria-label": "test",
        "aria-labelledby": "test-label",
        "id": "test",
        "label": "test",
      }
    }
    label="test"
    name="testField"
    type="text"
  />
</Fragment>
`;
